--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,9 @@ body {
   outline:none;
   cursor: pointer;
 }
+.select-book {
+  background-color: cadetblue;
+}
 .list-title {
   background-color: #CBCBCB;
   height: 100px;
