--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ body {
   justify-content: center;
 }
 .pagination-btns {
-  display: flex;
+  display: none;
   justify-content: space-evenly;
 }
 .list-title {
